Prepared the interface for iPhone

--- a/Owncloud iOs Client/Tabs/FileTab/Share/ShareViewController.xib
+++ b/Owncloud iOs Client/Tabs/FileTab/Share/ShareViewController.xib
@@ -7,6 +7,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ShareViewController" customModule="Owncloud_iOs_Client" customModuleProvider="target">
             <connections>
+                <outlet property="shareTableView" destination="dCh-g6-YPf" id="Cbf-73-F39"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -17,7 +18,7 @@
             <subviews>
                 <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="grouped" separatorStyle="none" rowHeight="44" sectionHeaderHeight="10" sectionFooterHeight="10" translatesAutoresizingMaskIntoConstraints="NO" id="dCh-g6-YPf">
                     <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
-                    <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                    <color key="backgroundColor" red="0.93725490196078431" green="0.93725490196078431" blue="0.95686274509803926" alpha="1" colorSpace="calibratedRGB"/>
                     <connections>
                         <outlet property="dataSource" destination="-1" id="PgS-8Z-q9C"/>
                         <outlet property="delegate" destination="-1" id="vf8-ib-rxV"/>
