--- a/Owncloud iOs Client/Tabs/FileTab/Share/Cells/ShareLinkHeaderCell.xib
+++ b/Owncloud iOs Client/Tabs/FileTab/Share/Cells/ShareLinkHeaderCell.xib
@@ -8,32 +8,31 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ShareLinkHeaderIdentifier" id="KGk-i7-Jjw" customClass="ShareLinkHeaderCell" customModule="Owncloud_iOs_Client" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ShareLinkHeaderIdentifier" rowHeight="40" id="KGk-i7-Jjw" customClass="ShareLinkHeaderCell" customModule="Owncloud_iOs_Client" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="320" height="40"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
                 <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="3Bs-cg-B5z">
-                        <rect key="frame" x="263" y="3" width="51" height="31"/>
-                    </switch>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="z8Q-Tn-uNb">
                         <rect key="frame" x="8" y="9" width="247" height="21"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="3Bs-cg-B5z">
+                        <rect key="frame" x="263" y="4" width="51" height="31"/>
+                    </switch>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="3Bs-cg-B5z" firstAttribute="leading" secondItem="z8Q-Tn-uNb" secondAttribute="trailing" constant="8" id="azj-8j-ZPU"/>
-                    <constraint firstItem="3Bs-cg-B5z" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" id="bfE-04-MDW"/>
-                    <constraint firstAttribute="bottomMargin" secondItem="z8Q-Tn-uNb" secondAttribute="bottom" constant="1" id="c0N-Tk-KHU"/>
-                    <constraint firstItem="3Bs-cg-B5z" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="-5" id="kOD-at-JrK"/>
-                    <constraint firstItem="3Bs-cg-B5z" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" id="m07-iw-oKN"/>
-                    <constraint firstAttribute="bottomMargin" secondItem="3Bs-cg-B5z" secondAttribute="bottom" constant="-3" id="nJN-02-hWG"/>
-                    <constraint firstItem="z8Q-Tn-uNb" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="srD-eC-foq"/>
-                    <constraint firstItem="z8Q-Tn-uNb" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="1" id="wE4-8u-jqO"/>
+                    <constraint firstItem="3Bs-cg-B5z" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" id="4ZO-Qa-Cqq"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="z8Q-Tn-uNb" secondAttribute="bottom" constant="1" id="6Ee-nc-WIY"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="3Bs-cg-B5z" secondAttribute="bottom" constant="-4" id="6sh-A1-upo"/>
+                    <constraint firstItem="3Bs-cg-B5z" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="-4" id="Jvo-Z8-wDT"/>
+                    <constraint firstItem="3Bs-cg-B5z" firstAttribute="leading" secondItem="z8Q-Tn-uNb" secondAttribute="trailing" constant="8" id="OZO-rs-fIu"/>
+                    <constraint firstItem="z8Q-Tn-uNb" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="PAP-5E-dzD"/>
+                    <constraint firstItem="z8Q-Tn-uNb" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="1" id="jQk-1D-fEI"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
