--- a/Owncloud iOs Client/Tabs/FileTab/Share/ShareViewController.xib
+++ b/Owncloud iOs Client/Tabs/FileTab/Share/ShareViewController.xib
@@ -5,9 +5,9 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ShareViewController" customModule="Owncloud_iOs_Client" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ShareMainViewController">
             <connections>
-                <outlet property="shareTableView" destination="dCh-g6-YPf" id="Cbf-73-F39"/>
+                <outlet property="shareTableView" destination="dCh-g6-YPf" id="fmj-a7-G2h"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
