--- a/Owncloud iOs Client/Tabs/FileTab/Share/Cells/ShareFileCell.xib
+++ b/Owncloud iOs Client/Tabs/FileTab/Share/Cells/ShareFileCell.xib
@@ -22,14 +22,20 @@
                             <constraint firstAttribute="height" constant="90" id="znX-FW-wxm"/>
                         </constraints>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="File Name" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Yje-bh-jmU">
+                    <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="File Name" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Yje-bh-jmU">
                         <rect key="frame" x="108" y="32" width="204" height="21"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Size" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5i0-Uz-NhM">
+                    <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Size" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5i0-Uz-NhM">
                         <rect key="frame" x="108" y="61" width="204" height="21"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Folder Name" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Bqj-YB-hKp">
+                        <rect key="frame" x="108" y="49" width="204" height="21"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
@@ -37,13 +43,17 @@
                 </subviews>
                 <constraints>
                     <constraint firstItem="5i0-Uz-NhM" firstAttribute="top" secondItem="Yje-bh-jmU" secondAttribute="bottom" constant="8" id="2Qw-wk-OBz"/>
+                    <constraint firstItem="Bqj-YB-hKp" firstAttribute="leading" secondItem="3Ov-PO-1rQ" secondAttribute="trailing" constant="8" id="8EF-vp-LNt"/>
                     <constraint firstItem="5i0-Uz-NhM" firstAttribute="leading" secondItem="3Ov-PO-1rQ" secondAttribute="trailing" constant="8" id="DS2-K0-suI"/>
                     <constraint firstAttribute="bottomMargin" secondItem="5i0-Uz-NhM" secondAttribute="bottom" constant="29" id="FTk-IJ-Vlu"/>
                     <constraint firstItem="5i0-Uz-NhM" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" id="G3T-bl-2wk"/>
+                    <constraint firstItem="Bqj-YB-hKp" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" id="IWO-nq-pdn"/>
                     <constraint firstAttribute="bottomMargin" secondItem="3Ov-PO-1rQ" secondAttribute="bottom" constant="6" id="TMJ-kQ-yF4"/>
                     <constraint firstItem="3Ov-PO-1rQ" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="7" id="UlH-Vg-HKA"/>
                     <constraint firstItem="Yje-bh-jmU" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" id="VtE-AX-STu"/>
                     <constraint firstItem="Yje-bh-jmU" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="24" id="gEO-2n-yje"/>
+                    <constraint firstItem="Bqj-YB-hKp" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="41" id="gZ8-7D-jWP"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="Bqj-YB-hKp" secondAttribute="bottom" constant="41" id="guG-Bi-Rnq"/>
                     <constraint firstItem="Yje-bh-jmU" firstAttribute="leading" secondItem="3Ov-PO-1rQ" secondAttribute="trailing" constant="8" id="sFg-JT-yE6"/>
                     <constraint firstItem="3Ov-PO-1rQ" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="2" id="wnk-da-vhU"/>
                 </constraints>
@@ -52,6 +62,7 @@
                 <outlet property="fileImage" destination="3Ov-PO-1rQ" id="fvV-MB-NAY"/>
                 <outlet property="fileName" destination="Yje-bh-jmU" id="A8X-J2-agA"/>
                 <outlet property="fileSize" destination="5i0-Uz-NhM" id="mDs-JE-Xom"/>
+                <outlet property="folderName" destination="Bqj-YB-hKp" id="vC3-yA-HHn"/>
             </connections>
             <point key="canvasLocation" x="419" y="421"/>
         </tableViewCell>
