--- a/Owncloud iOs Client/Tabs/FileTab/Share/Cells/ShareLinkOptionCell.xib
+++ b/Owncloud iOs Client/Tabs/FileTab/Share/Cells/ShareLinkOptionCell.xib
@@ -16,13 +16,13 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bdN-Mu-iOS">
-                        <rect key="frame" x="10" y="7" width="240" height="21"/>
+                        <rect key="frame" x="15" y="7" width="235" height="21"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalCompressionResistancePriority="749" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KwH-fr-NKC">
-                        <rect key="frame" x="10" y="36" width="240" height="11"/>
+                        <rect key="frame" x="15" y="36" width="235" height="11"/>
                         <fontDescription key="fontDescription" type="system" pointSize="12"/>
                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
@@ -36,19 +36,17 @@
                     </switch>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="bdN-Mu-iOS" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="-1" id="0HZ-4h-Kxb"/>
-                    <constraint firstItem="2eu-Ak-XXg" firstAttribute="leading" secondItem="KwH-fr-NKC" secondAttribute="trailing" constant="10" id="Hq1-5H-wwU"/>
-                    <constraint firstAttribute="bottomMargin" secondItem="KwH-fr-NKC" secondAttribute="bottom" constant="-1" id="MD0-dl-l5d"/>
-                    <constraint firstItem="KwH-fr-NKC" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="2" id="Raa-7f-ewS"/>
-                    <constraint firstItem="KwH-fr-NKC" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="2" id="WIB-IY-VUg"/>
-                    <constraint firstAttribute="bottomMargin" secondItem="2eu-Ak-XXg" secondAttribute="bottom" constant="5" id="YAh-YV-sUh"/>
-                    <constraint firstItem="KwH-fr-NKC" firstAttribute="top" secondItem="bdN-Mu-iOS" secondAttribute="bottom" constant="8" id="eCh-mY-lqR"/>
-                    <constraint firstItem="2eu-Ak-XXg" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="2" id="ekH-30-M19"/>
-                    <constraint firstItem="bdN-Mu-iOS" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="-1" id="hXf-qT-UJD"/>
-                    <constraint firstAttribute="trailingMargin" secondItem="2eu-Ak-XXg" secondAttribute="trailing" constant="3" id="j12-kp-iVU"/>
-                    <constraint firstItem="bdN-Mu-iOS" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="2" id="mc5-cn-VAd"/>
-                    <constraint firstItem="bdN-Mu-iOS" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="2" id="n31-eC-n2x"/>
-                    <constraint firstItem="2eu-Ak-XXg" firstAttribute="leading" secondItem="bdN-Mu-iOS" secondAttribute="trailing" constant="10" id="yhE-dB-YPc"/>
+                    <constraint firstItem="KwH-fr-NKC" firstAttribute="top" secondItem="bdN-Mu-iOS" secondAttribute="bottom" constant="8" id="2CQ-hw-pkY"/>
+                    <constraint firstItem="2eu-Ak-XXg" firstAttribute="leading" secondItem="bdN-Mu-iOS" secondAttribute="trailing" constant="10" id="2MS-vZ-SCo"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="2eu-Ak-XXg" secondAttribute="bottom" constant="5" id="Nbm-v0-uIj"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="KwH-fr-NKC" secondAttribute="bottom" constant="-1" id="Og4-H8-Loe"/>
+                    <constraint firstItem="KwH-fr-NKC" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="7" id="V3l-9h-1gC"/>
+                    <constraint firstItem="2eu-Ak-XXg" firstAttribute="leading" secondItem="KwH-fr-NKC" secondAttribute="trailing" constant="10" id="b2l-Hb-Wb9"/>
+                    <constraint firstItem="bdN-Mu-iOS" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="7" id="izf-rn-v12"/>
+                    <constraint firstItem="2eu-Ak-XXg" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="2" id="mep-Rz-hgh"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="2eu-Ak-XXg" secondAttribute="trailing" constant="3" id="oAq-Ek-hHI"/>
+                    <constraint firstItem="2eu-Ak-XXg" firstAttribute="leading" secondItem="KwH-fr-NKC" secondAttribute="trailing" constant="10" id="pHQ-zF-0HV"/>
+                    <constraint firstItem="bdN-Mu-iOS" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="-1" id="x9p-KF-u7U"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
