--- a/Owncloud iOs Client/Tabs/FileTab/Share/Cells/ShareLinkHeaderCell.xib
+++ b/Owncloud iOs Client/Tabs/FileTab/Share/Cells/ShareLinkHeaderCell.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="8191" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9059" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8154"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9049"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <objects>
@@ -27,17 +27,39 @@
                             <constraint firstAttribute="height" constant="31" id="42z-Rd-PJf"/>
                             <constraint firstAttribute="width" constant="49" id="VLD-0E-HAu"/>
                         </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="42z-Rd-PJf"/>
+                                <exclude reference="VLD-0E-HAu"/>
+                            </mask>
+                        </variation>
                     </switch>
                 </subviews>
                 <constraints>
+                    <constraint firstAttribute="trailingMargin" secondItem="3Bs-cg-B5z" secondAttribute="trailing" constant="3" id="7E4-jm-JN0"/>
+                    <constraint firstItem="z8Q-Tn-uNb" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="HX1-Mb-mT3"/>
                     <constraint firstAttribute="bottomMargin" secondItem="3Bs-cg-B5z" secondAttribute="bottom" constant="-1" id="Heq-2Y-rN6"/>
                     <constraint firstItem="3Bs-cg-B5z" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="-2" id="JTP-Ux-8FQ"/>
                     <constraint firstItem="z8Q-Tn-uNb" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="4" id="LRO-Bo-uaa"/>
                     <constraint firstItem="z8Q-Tn-uNb" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="Rao-tc-WkG"/>
+                    <constraint firstItem="z8Q-Tn-uNb" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="VVt-4e-4bh"/>
+                    <constraint firstItem="3Bs-cg-B5z" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="Wwg-Rj-w6a"/>
+                    <constraint firstItem="3Bs-cg-B5z" firstAttribute="leading" secondItem="z8Q-Tn-uNb" secondAttribute="trailing" constant="7" id="aAQ-JE-P7l"/>
                     <constraint firstAttribute="trailingMargin" secondItem="3Bs-cg-B5z" secondAttribute="trailing" constant="3" id="cGW-2v-Tjc"/>
                     <constraint firstAttribute="bottomMargin" secondItem="z8Q-Tn-uNb" secondAttribute="bottom" constant="3" id="clB-47-np9"/>
                     <constraint firstItem="3Bs-cg-B5z" firstAttribute="leading" secondItem="z8Q-Tn-uNb" secondAttribute="trailing" constant="7" id="s3U-r0-d8h"/>
                 </constraints>
+                <variation key="default">
+                    <mask key="constraints">
+                        <exclude reference="LRO-Bo-uaa"/>
+                        <exclude reference="Rao-tc-WkG"/>
+                        <exclude reference="clB-47-np9"/>
+                        <exclude reference="Heq-2Y-rN6"/>
+                        <exclude reference="JTP-Ux-8FQ"/>
+                        <exclude reference="cGW-2v-Tjc"/>
+                        <exclude reference="s3U-r0-d8h"/>
+                    </mask>
+                </variation>
             </tableViewCellContentView>
             <connections>
                 <outlet property="switchSection" destination="3Bs-cg-B5z" id="g50-OP-6gO"/>
