--- a/Owncloud iOs Client/Tabs/FileTab/Share/Cells/SharePrivilegeCell.xib
+++ b/Owncloud iOs Client/Tabs/FileTab/Share/Cells/SharePrivilegeCell.xib
@@ -21,6 +21,12 @@
                             <constraint firstAttribute="width" constant="49" id="Ian-vh-Srb"/>
                             <constraint firstAttribute="height" constant="31" id="dxb-kE-jAk"/>
                         </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="Ian-vh-Srb"/>
+                                <exclude reference="dxb-kE-jAk"/>
+                            </mask>
+                        </variation>
                     </switch>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="06q-8S-Bc9" userLabel="option name">
                         <rect key="frame" x="8" y="12" width="245" height="21"/>
@@ -33,11 +39,27 @@
                     <constraint firstItem="0EM-W9-wfT" firstAttribute="top" secondItem="mcU-f6-ESE" secondAttribute="topMargin" constant="-2" id="0TO-bI-Tpd"/>
                     <constraint firstAttribute="bottomMargin" secondItem="06q-8S-Bc9" secondAttribute="bottom" constant="3" id="0Zz-DH-3fb"/>
                     <constraint firstAttribute="bottomMargin" secondItem="0EM-W9-wfT" secondAttribute="bottom" constant="-1" id="7wK-RI-qiV"/>
+                    <constraint firstItem="0EM-W9-wfT" firstAttribute="leading" secondItem="06q-8S-Bc9" secondAttribute="trailing" constant="7" id="Fy4-iD-6hQ"/>
                     <constraint firstItem="06q-8S-Bc9" firstAttribute="leading" secondItem="mcU-f6-ESE" secondAttribute="leadingMargin" id="Jfz-zL-xsP"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="0EM-W9-wfT" secondAttribute="trailing" constant="3" id="Uo6-mj-Dt2"/>
                     <constraint firstItem="06q-8S-Bc9" firstAttribute="top" secondItem="mcU-f6-ESE" secondAttribute="topMargin" constant="4" id="cWE-xH-4wP"/>
                     <constraint firstAttribute="trailingMargin" secondItem="0EM-W9-wfT" secondAttribute="trailing" constant="3" id="khm-Bo-2b1"/>
+                    <constraint firstItem="06q-8S-Bc9" firstAttribute="centerY" secondItem="mcU-f6-ESE" secondAttribute="centerY" id="pP6-nZ-RiR"/>
                     <constraint firstItem="0EM-W9-wfT" firstAttribute="leading" secondItem="06q-8S-Bc9" secondAttribute="trailing" constant="7" id="raJ-kf-RGN"/>
+                    <constraint firstItem="06q-8S-Bc9" firstAttribute="leading" secondItem="mcU-f6-ESE" secondAttribute="leadingMargin" id="ruD-KD-wB1"/>
+                    <constraint firstItem="0EM-W9-wfT" firstAttribute="centerY" secondItem="mcU-f6-ESE" secondAttribute="centerY" id="tBP-KC-6Nd"/>
                 </constraints>
+                <variation key="default">
+                    <mask key="constraints">
+                        <exclude reference="0Zz-DH-3fb"/>
+                        <exclude reference="Jfz-zL-xsP"/>
+                        <exclude reference="cWE-xH-4wP"/>
+                        <exclude reference="0TO-bI-Tpd"/>
+                        <exclude reference="7wK-RI-qiV"/>
+                        <exclude reference="khm-Bo-2b1"/>
+                        <exclude reference="raJ-kf-RGN"/>
+                    </mask>
+                </variation>
             </tableViewCellContentView>
             <connections>
                 <outlet property="optionName" destination="06q-8S-Bc9" id="wYq-bl-qYD"/>
